0028795: Boolean operations corrupt the p-curve of the source planar face if "non-destructive" option is switched off

Now, the range of BRep_CurveRepresentation of the edge is updated if at least one of its boundary is not infinite (earlier, it was updated if all two boundaries are not infinite only).